--- a/game.html
+++ b/game.html
@@ -5,86 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <title>GAME</title>
-  <style>
-    body {
-      margin: 0;
-    }
-
-    #field {
-      position: relative;
-      width: 1200px;
-      height: 570px;
-      background: #1c7d26;
-    }
-
-    .cell {
-      position: absolute;
-      width: 28px;
-      height: 28px;
-      border: 1px solid black;
-    }
-
-    .cell-0 {
-      background: #1c7d26;
-    }
-
-    .cell-1 {
-      background: #090;
-    }
-
-    .cell-2 {
-      background: #1c7d26;
-    }
-
-    .cell-3 {
-      background: #d05919;
-    }
-
-    .cell-4 {
-      background: red;
-    }
-
-    .cell-5 {
-      background: #9c5329;
-    }
-
-    .cell-6 {
-      background: #d58a5f;
-    }
-
-    .cell-7 {
-      background: black;
-    }
-
-    .cell-8 {
-      background: black;
-    }
-
-    .cell-9 {
-      background: gold;
-    }
-
-    #player {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 30px;
-      height: 30px;
-      background-image: url("Goblin.gif");
-      background-size: cover;
-      z-index: 100;
-    }
-
-    #score {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-
-    #player.has-box {
-      background-image: url("GoblinHasBox.gif");
-    }
-  </style>
+  <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -93,249 +14,8 @@
     <div id="stone"></div>
   </div>
   <div id="score">0</div>
-
-  <script>
-    function stepMark(count) {
-      for (var i = 0; i < count; i++) {
-        step();
-        mark();
-      }
-    }
-
-    function square(size = 2) {
-      for (var i = 0; i < 4; i++) {
-        stepMark(size);
-        turnRight();
-      }
-    }
-
-    async function stepN(count) {
-      for (var i = 0; i < count; i++) {
-         await step();
-      }
-    }
-
-    function wallAhead() {
-      return cellAhead() === 5;
-    }
-
-    async function moveWhileWallRight() {
-      while (true) {
-        await step();
-        turnRight();
-        if (!wallAhead()) break;
-        turnLeft();
-      }
-    }
-    async function moveWhileInHouse() {
-      while (cellAhead() !== 0) {
-        var a = cellAhead();
-        if (a === 3 || a === 6) {
-          await step();
-        } else if (a === 5) {
-          turnLeft();
-        }
-      }
-    }
-
-    async function main() {
-      await stepN(5);
-      turnRight();
-      while (!wallAhead()) {
-        await step();
-      }
-      turnLeft();
-      while (cellAhead() !== 6) {
-        await moveWhileWallRight();
-      }
-      moveWhileInHouse();
-    
-    }
-
-    let level = [
-      [1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 5, 5, 5, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [1, 1, 1, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 3, 3, 7, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 1, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 5, 3, 3, 3, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 3, 5, 5, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 2, 0, 5, 5, 5, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 0, 0, 5, 3, 6, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 0, 0, 5, 3, 5, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 2, 1, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0, 0, 0, 0, 0, 0, 5, 5, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 5, 6, 3, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 5, 5, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [5, 5, 3, 5, 5, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [5, 3, 3, 3, 9, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-      [5, 5, 5, 5, 5, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
-    ];
-    let score = 0;
-    let x = 0;
-    let y = 0;
-    let box = 0;
-    const maxX = 39;
-    const maxY = 24;
-
-    const field = document.getElementById('field');
-
-    for (let y = 0; y < level.length; y++) {
-      for (let x = 0; x < level[y].length; x++) {
-        const cell = document.createElement('div');
-        cell.id = `cell-${y}-${x}`;
-        cell.classList.add('cell');
-        cell.classList.add(`cell-${level[y][x]}`);
-        cell.style.left = `${x * 30}px`;
-        cell.style.top = `${y * 30}px`;
-        field.appendChild(cell);
-      }
-    }
-
-    function mapAt(x, y) {
-      return level[y][x];
-    }
-
-    function changeMapAt(x, y, value) {
-      level[y][x] = value;
-      document.getElementById(`cell-${y}-${x}`).className = `cell cell-${value}`;
-    }
-
-    function collectBox(boxType) {
-      if (box != 0) return;
-
-      box = boxType;
-      player.classList.add('has-box');
-
-      changeMapAt(x, y, 8);
-
-      const boxX = x;
-      const boxY = y;
-
-      setTimeout(function () {
-        const newType = Math.random() > 0.95 ? 9 : 6;
-        changeMapAt(boxX, boxY, newType);
-      }, 11000);
-    }
-
-    function dropBox() {
-      if (box == 0) return;
-
-      changeScore(box == 1 ? 100 : 200);
-      box = 0;
-      player.classList.remove('has-box');
-    }
-    function changeScore(val) {
-      score += val;
-      document.getElementById('score').innerText = score;
-    }
-    function move(dx, dy) {
-      const newX = x + dx;
-      const newY = y + dy;
-
-      if (newX < 0) return;
-      if (newY < 0) return;
-      if (newX > maxX) return;
-      if (newY > maxY) return;
-      if (mapAt(newX, newY) == 5) return;
-
-      x = newX;
-      y = newY;
-      player.style.left = `${x * 30}px`;
-      player.style.top = `${y * 30}px`;
-
-      switch (mapAt(x, y)) {
-        case 6:
-          collectBox(1);
-          break;
-        case 9:
-          collectBox(2);
-          break;
-        case 7:
-          dropBox();
-          break;
-        case 4:
-          if (score > 0)
-            changeScore(-50);
-          break;
-        case 2:
-          if (score > 0) {
-            var x1 = x;
-            var y1 = y;
-            setTimeout(function () {
-              console.log("test");
-              changeMapAt(x1, y1, 2);
-            }, 5000);
-            changeMapAt(x1, y1, 4);
-            changeScore(-50);
-          }
-          break;
-      }
-    }
-
-    const player = document.getElementById('player');
-    document.addEventListener('keydown', function (e) {
-      switch (e.key) {
-        case 'ArrowLeft': move(-1, 0); break;
-        case 'ArrowRight': move(1, 0); break;
-        case 'ArrowUp': move(0, -1); break;
-        case 'ArrowDown': move(0, 1); break;
-      }
-    });
-
-    // ================================================
-    let dirX = 1, dirY = 0;
-    let queue = [];
-
-    function sleep(ms = 100) {
-      return new Promise(resolve => setTimeout(resolve, ms));
-    }
-
-    async function mark(color = 'yellow') {
-      document.getElementById(`cell-${y}-${x}`).style.backgroundColor = color;
-      await sleep();
-    }
-
-    async function step() {
-      move(dirX, dirY);
-      await sleep();
-    }
-
-    function turnRight() {
-      if (dirX == 1) {
-        dirX = 0; dirY = 1;
-      } else if (dirX == -1) {
-        dirX = 0; dirY = -1;
-      } else if (dirY == 1) {
-        dirX = -1; dirY = 0;
-      } else {
-        dirX = 1; dirY = 0;
-      }
-    }
-
-    function turnLeft() {
-      if (dirX == 1) {
-        dirX = 0; dirY = -1;
-      } else if (dirX == -1) {
-        dirX = 0; dirY = 1;
-      } else if (dirY == 1) {
-        dirX = 1; dirY = 0;
-      } else {
-        dirX = -1; dirY = 0;
-      }
-    }
-
-    function cellAhead() {
-      const newX = x + dirX;
-      const newY = y + dirY;
-      if (newX < 0 || newY < 0 || newX > maxX || newY > maxY) return -1;
-      return level[newY][newX];
-    }
-    main();
-  </script>
+  <script src="game.js"></script>
+  <!-- <script src="main.js"></script> -->
 </body>
 
 </html>
