--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div id="stone"></div>
   </div>
   <div id="score">0</div>
+  <div id="levelNum">0</div>
+  <div id="printScore">Score</div>
+  <div id="printLevelNum">Level</div>
   <script src="game.js"></script>
   <!-- <script src="main.js"></script> -->
 </body>
